manifest/objects/Q_Item_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Desc__c</fullName>
        <label>Full Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Item__c</fullName>
        <label>Q Item</label>
        <referenceTo>Q_Item__c</referenceTo>
        <relationshipLabel>Q Item Exceptions</relationshipLabel>
        <relationshipName>Q_Item_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Desc__c</fullName>
        <label>Short Description</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Q Item Exception</label>
    <nameField>
        <label>Q Item Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q Item Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>